Refactor Khalti payment integration and cleanup
Reworked backend checkout routes to use Khalti's ePayment API with proper environment variable configuration, added endpoints for payment initiation and callback handling, and improved payment verification and order finalization logic. Removed unused Khalti public key from frontend, updated axios version, and removed the 'khalti-checkout-web' dependency from frontend packages.

--- a/backend/.env
+++ b/backend/.env
@@ -1,11 +1,14 @@
 PORT=9000
 MONGO_URI=mongodb+srv://birajt343:sPSkhTvX9HizxStM@cluster0.f5zlurf.mongodb.net/Tech-Mart?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=7W i$/?Z"*}/vi1GB%RNc>9:.FA{{*CIQvMSj>j$I_Bmu0s-:<X_hvjai))!e
+
 CLOUDINARY_CLOUD_NAME=dqkzaozbl
 CLOUDINARY_API_KEY=334588312927295
 CLOUDINARY_API_SECRET=_gQe_632Sy3s-PXBmtl51oTPjDE
-VITE_KHALTI_PUBLIC_KEY=b04fbe64cc744e4aa90ac083f3e42977
+
+# KHALTI LIVE CONFIG — THESE 3 LINES WERE MISSING
 KHALTI_SECRET_KEY=17a43e51a125423ba9c3deec3d16e0e4
-KHALTI_INITIATE_URL=https://a.khalti.com/api/v2/payment/initiate/
-KHALTI_VERIFY_URL=https://a.khalti.com/api/v2/payment/verify/
-CLIENT_URL=http://localhost:5173  # Update to ngrok URL if needed (e.g., https://1234-5678-90.ngrok.io)
+KHALTI_RETURN_URL=http://localhost:5173/checkout/success
+KHALTI_WEBSITE_URL=http://localhost:5173
+
+CLIENT_URL=http://localhost:5173
