Refactor checkout, payment, and order flows; update UI
Backend: Improved Khalti payment integration by constructing return URLs in code, handling payment callbacks to create permanent orders, and updating product and user models for flexibility. Seeder no longer deletes users or creates default admin. User registration and login routes simplified and secured. Frontend: Enhanced cart and checkout UI, improved order confirmation and details pages, and standardized currency display to 'Rs.'. Redux auth slice now uses a consistent axios instance and streamlines user/guest management.

--- a/backend/.env
+++ b/backend/.env
@@ -6,9 +6,9 @@ CLOUDINARY_CLOUD_NAME=dqkzaozbl
 CLOUDINARY_API_KEY=334588312927295
 CLOUDINARY_API_SECRET=_gQe_632Sy3s-PXBmtl51oTPjDE
 
-# KHALTI LIVE CONFIG — THESE 3 LINES WERE MISSING
+# Khalti Configuration
 KHALTI_SECRET_KEY=17a43e51a125423ba9c3deec3d16e0e4
-KHALTI_RETURN_URL=http://localhost:5173/checkout/success
 KHALTI_WEBSITE_URL=http://localhost:5173
+# Removed KHALTI_RETURN_URL — now constructed safely in code to /order-confirmation
 
 CLIENT_URL=http://localhost:5173
